...
          className="text-foreground text-3xl font-bold"
        >
          Expenses
        </Text>
        <View className="flex-row items-center gap-2">
          <Button
            testID="expense-debt-overview-button"
            title="Debt Overview"
            size="md"
            icon="arrow-right"
            onPress={() => router.push(`/(tabs)/expenses/debts`)}
          />
          {isLargeScreen && (
...
