...
  }

  return (
    <View className="flex-1 flex-col gap-6 p-4">
      <View className="flex flex-row items-center justify-between">
        <Text
          testID="group-dashboard-title"
          className="text-foreground text-3xl font-bold"
        >
          Your Groups
        </Text>

        <Button
          testID="group-create-button"
          title="Create Group"
          variant="primary"
          size="lg"
          icon="plus"
          onPress={() => router.push("/(tabs)/home/create-group")}
        />
...
