...
        <div className="grid gap-6">
          <div className="grid gap-2">
            <Label htmlFor="name">Group Name</Label>
            <div className="flex flex-col items-center gap-4 md:flex-row">
              <Input
                id="name"
                data-testid="group-name-input"
                placeholder="Enter group name"
                value={name}
                maxLength={256}
                disabled={!isAdmin}
                onChange={(event) => setName(event.target.value)}
              />
              <Button
                className="w-full min-w-[150px] md:w-fit"
                data-testid="group-name-save"
                disabled={groupNameMutation.isPending || !isAdmin}
                onClick={() =>
                  groupNameMutation.mutate({ id: groupId, name: name || "" })
                }
              >
                {groupNameMutation.isPending ? (
...
