...
            className="text-foreground flex-1 text-3xl font-bold"
            numberOfLines={1}
          >
            {selectedGroupName}
          </Text>
          <Button
            testID="shopping-lists-group-settings"
            title="Group Settings"
            variant="outline"
            size="md"
            icon="settings"
            onPress={() =>
              router.navigate("/(tabs)/settings/group-settings", {
...
